--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
     margin-top: 20px;
 }
 
+
 /* Login Page Styling */
 .login-container {
     display: flex;
@@ -213,3 +214,6 @@ body {
     transform: translateY(-2px);
 }
 
+.spaced-button {
+    margin: 50px 0;  
+}
